--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,17 @@
+.a {
+    text-align: center;
+}
+
 .frex {
     display : flex;
+    justify-content: space-between;
 }
 
 .sample {
-    height: 100px;
-    width: 100px;
+    height: 200px;
+    width: 350px;
     border: solid black 1px;
-    margin: 0 10px;
-}
+    margin: 40px 20px;
 
-
-.samplee {
-    height: 100px;
-    width : 100px;
-    border : solid black 1px;
-    margin: 0 10px;
+    /* flex:1; */
 }
