--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,3 +21,22 @@
     width : auto;
     border : solid black 1px;
 }
+
+.a {
+    margin: 60px;
+}
+
+.about {
+    font-size: 40px;
+    margin: 25px;
+    font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN';
+    color : rgb(71, 68, 68);
+}
+
+.aboutus {
+    font-size: 20px; 
+    font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN';
+    color : rgb(71, 68, 68);
+line-height: 2;
+
+}
