--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,8 @@
 
 .a {
     margin: 60px;
+    display: flex;
+
 }
 
 .about {
@@ -39,4 +41,21 @@
     color : rgb(71, 68, 68);
 line-height: 2;
 
+}
+
+.b {
+width: 90%;
+}
+
+.n {
+    -webkit-writing-mode: vertical-rl;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+    /* width:10%; */
+}
+
+.c {
+    width: 10%;
+    text-align: center;
+    
 }
