--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,31 +1,43 @@
 .a {
-    text-align: center;
+    margin: 60px auto;
+    /* display: flex; */
+    width: 90%;
 }
 
-.frex {
-    display : flex;
-    justify-content: space-between;
+.a img {
+    width: 100%;
 }
 
-.sample {
+.frex ul {
+    display: flex;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
+    padding: 0;
+    width: 90%;
+    margin: auto;
+}
+
+.frex ul li {
     height: 200px;
-    width: 350px;
+    width: 32%;
+    max-width: 100%;
     border: solid black 1px;
-    margin: 40px 20px;
+    /* margin: 40px 20px; */
+    list-style: none;
+    /* flex: 1; */
+    margin-right: 18px;
+    margin-bottom: 20px;
+}
 
-    /* flex:1; */
+.frex ul li:nth-child(3n) { margin-right: 0;
 }
 
 .middle {
-    height : 300px;
-    width : auto;
-    border : solid black 1px;
-}
-
-.a {
-    margin: 60px;
-    display: flex;
-
+    height: 300px;
+    width: 90%;
+    border: solid black 1px;
+    max-width: 100%;
+    margin: 10px auto;
 }
 
 .about {
