--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,18 +34,26 @@
     /* flex: 1; */
     margin-right: 18px;
     margin-bottom: 20px;
+    box-shadow: 10px 10px 10px -4px rgb(220, 213, 213);
 }
 
 .frex ul li:nth-child(3n) { margin-right: 0;
 }
 
 .middle {
+    display: flex;
     height: 300px;
     width: 90%;
     border: solid black 1px;
     max-width: 100%;
     margin: 10px auto;
 }
+
+/* .middle_under{
+    width: 300px;
+    height: 200px;
+    border : solid 1px black;
+}  */
 
 .about {
     font-size: 40px;
