--- a/stylesheet.css
+++ b/stylesheet.css
@@ -179,3 +179,47 @@ margin: auto;
     width: 100%;
     height: auto;
 }
+
+table{
+    border-collapse: collapse;
+    border: solid 1px #ccc3c3;
+    width: 100%;
+    font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN';
+    color: 
+}
+
+tbody{
+    max-width: 100%;
+    text-align: center;
+    color: rgb(71, 68, 68);
+}
+
+.time{
+    background-color: rgba(130, 239, 4, 0.23);
+    text-align: center;
+    
+}
+
+.time_top {
+    margin: 50px auto;
+    width: 80%;
+}
+
+
+td{
+    border-bottom:#ccc3c3 solid 1px;
+}
+td:last-child {
+    padding: 10px 0;
+}
+/*table tr:nth-child(odd) td:first-child{
+    padding: 30px 0;
+}*/
+
+/*table tr:nth-child(odd) td:nth-child(2), 
+tr:nth-child(even) td:first-child,
+tr:nth-child(odd) td:first-child
+{
+    padding: 10px 30px;
+    text-align: center;
+}*/
