--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,7 +121,6 @@ text-align: center;
     display: flex;
     height: 500px;
     width: 90%;
-    border: solid black 1px;
     max-width: 100%;
     margin: 10px auto;
     border-collapse: collapse;
@@ -131,7 +130,17 @@ text-align: center;
     width: 50%;
     height: auto;
     border: solid 1px black;
+    
 }
+.middle_second{
+    width: 50%;
+    height: auto;
+    border: solid 1px black;
+    background: rgb(255, 255, 189);
+}
+
+
+
 /* .middle_under{
     width: 300px;
     height: 200px;
