--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,7 @@
    margin-top: 40px;
 }
 
-.about span{
+.about span, .news span{
     font-size: 30px;
     margin: 25px;
     font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN';
@@ -111,7 +111,9 @@ text-align: center;
 }
 }
 
+.news span {
 
+}
 
 /* .frex ul li:nth-child(even) {
     box-shadow: 10px 10px 10px -4px rgb(214, 138, 182);
