--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,9 +182,13 @@ margin: auto;
     border-collapse: collapse;
 }
 
+.access_container {
+    display: flex;
+}
 .access_under{
     text-align: center;
-    margin: 30px;
+    margin: 30px auto;
+    width: 50%;
 }
 
 .access_under span{
