--- a/stylesheet.css
+++ b/stylesheet.css
@@ -174,13 +174,14 @@ margin: auto;
     
 }
 
-.news_under{
+.news_under {
     border: solid 1px black;
     height: 100px;
     width: 90%;
-    margin: auto;
+    margin: 35px auto;
     border-collapse: collapse;
 }
+
 
 .access_container {
     display: flex;
