--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,9 +32,10 @@
     width: 100%;
 }
 
-.about ,.news{
-   text-align: center; 
-   margin-top: 40px;
+.about, .news {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
 .about span, .news span{
@@ -176,9 +177,9 @@ margin: auto;
 
 .news_under {
     border: solid 1px black;
-    height: 100px;
+    height: 130px;
     width: 90%;
-    margin: 35px auto;
+    margin: auto;
     border-collapse: collapse;
 }
 
