--- a/stylesheet.css
+++ b/stylesheet.css
@@ -281,3 +281,10 @@ tr:nth-child(odd) td:first-child
     color: rgb(71, 68, 68);
     border-bottom: double 6px rgb(71, 68, 68);
 }
+
+
+.footer{
+    width: 100%;
+    height: 300px;
+    background-color: burlywood;
+}
