--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,14 +182,24 @@ margin: auto;
 
 .news_under{
     display: flex;
+    height: 300px;
+    background-color: rgb(244, 247, 247);
+    border-top: darkblue solid 1px;
 }
 
 .news_under div{
-    border: solid 1px black;
-    height: 200px;
     width: 50%;
     margin: auto;
     border-collapse: collapse;
+}
+
+.news_img {
+    text-align: center;
+}
+
+.news_img img{
+    height: 230px;
+    width: auto;
 }
 
 
