--- a/stylesheet.css
+++ b/stylesheet.css
@@ -321,19 +321,52 @@ tr:nth-child(odd) td:first-child
 }
 
 
-
-.float a{
-    height : 100px;
-    width: 100px;
-    background: blue;
+/*.js-scroll-fadein {
+    transition: opacity 1s;
+    visibility: hidden;
+    opacity: 0;
+}*/
+.js-scroll-fadein.is-fadein {
+          visibility: visible;
+          opacity: 1;
+        }
+  /*--------------------------------
+    arrow
+  --------------------------------*/
+  .arrow{
     position: fixed;
-    right: 0px; /* 調整を自由に  Feel free to adjust  */
-    bottom: 0;
-    display: block;
-    transition: all 0.5s ease 0s;
-    z-index: 1;
+    right: 12px;
+    bottom: 12px;
+    color: #fff;
+    cursor: pointer;
+    background-color: #c4c4c4;
+    border-radius: 22px;
+    padding: 20px;
+    transition: all 0.2s ease-in-out;
 }
 
-/*.float_right{
-    max-width: 100%;
-}
+     .arrow:hover{
+          opacity: .8;
+          bottom: 15px;
+          box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.5);
+        }
+
+        .arrow:before,
+        .arrow:after {
+          content: "";
+          width: 12px;
+          height: 12px;
+          border-top: solid 3px #fff;
+          border-right: solid 3px #fff;
+          transform: rotate(-45deg);
+          position:  absolute;
+          left: 14px;
+        }
+
+        .arrow:before {
+          top: 11px;
+        }
+        .arrow:after {
+          top: 21px;
+        }
+
