--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,11 +18,11 @@ body{
   list-style: none;
 }
 
-.menu_under li a:hover {
+/* .menu_under li a:hover {
     box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.5);
     transform: translateY(-5px);
     cursor: pointer;
-}
+} */
 
 
 .menu_under li a{
