--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,15 +134,13 @@ text-align: center;
 }
 }
 
-.frex li .details dd{
-    width: 32%;
+.frex li .details dd {
+    width: 700px;
     max-width: 100%;
     height: 525px;
-    background-color: red; 
+    background-color: red;
+    margin-left: 0px;
 }
-
-
-
 
 /* .frex ul li:nth-child(even) {
     box-shadow: 10px 10px 10px -4px rgb(214, 138, 182);
@@ -497,4 +495,17 @@ tr:nth-child(odd) td:first-child
 
 .footer_list ul li{
     list-style: none;
+}
+
+
+
+.flower_container img {
+	overflow: hidden;
+}
+.flower_container dl {
+	transition: opacity .6s, transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.details li:not(:hover) dl {
+	opacity: 0;
+	transform: translateY(100%);
 }
