--- a/stylesheet.css
+++ b/stylesheet.css
@@ -509,3 +509,14 @@ tr:nth-child(odd) td:first-child
 	opacity: 0;
 	transform: translateY(100%);
 }
+
+.details .type1 {
+	overflow: hidden;
+}
+.details .type1 dl {
+	transition: opacity .6s, transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.details .type1:not(:hover) dl {
+	opacity: 0;
+	transform: translateY(100%);
+}
