--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,10 @@ body{
     margin: 0;
 }
 
+.menu{
+    max-width: 100%;
+}
+
 .menu_under {
     list-style-type: none;
     display: flex;
@@ -31,6 +35,7 @@ body{
 .menu_under li a{
     color : rgb(71, 68, 68);
     text-decoration: none;
+    font-size: 5%;
 }
 
 
@@ -109,11 +114,25 @@ text-align: center;
     margin-right: 1.5%;
     margin-bottom: 20px;
     box-shadow: 10px 10px 10px -4px rgb(220, 213, 213);
+    position: relative;
 }
 
 .frex ul li img {
     width: 100%;
 }
+
+.frex ul li {
+    overflow: hidden;
+  }
+.frex ul li dl {
+    transition: opacity 0.6s,
+      transform 0.6s cubic-bezier(0.545, 0.08, 0.52, 0.975);
+  }
+
+.frex ul li:not(:hover) dl {
+    opacity: 0;
+    transform: translateY(100%);
+  }
 
 
 @media screen and (max-width:767px){
@@ -136,12 +155,22 @@ text-align: center;
 }
 
 .frex li .details dd {
-    width: 700px;
+    /* width: 312px; */
     max-width: 100%;
-    height: 525px;
-    background-color: red;
+    height: 100%;
+    background-color: #795548;
     margin-left: 0px;
+    /* height: 240px; */
+    position: relative;
+    max-height: 100%;
+    color: #fff;
+    font-size: 25px;
+    font-family: 'Athelas',sans-serif;
+    padding: 60px 20px;
+    line-height: 1.5;
 }
+
+
 
 /* .frex ul li:nth-child(even) {
     box-shadow: 10px 10px 10px -4px rgb(214, 138, 182);
@@ -509,7 +538,14 @@ tr:nth-child(odd) td:first-child
 	overflow: hidden;
 }
 .flower_container dl {
-	transition: opacity .6s, transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition: opacity .6s, transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    position: absolute;
+    z-index: 2;
+    opacity: 0.6;
+    top: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 .details li:not(:hover) dl {
 	opacity: 0;
